// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List.vue has 3 results one is filtered 1`] = `
<v-content-stub tag="main">
  <v-container-stub tag="div">
    <v-card-stub tag="div" elevation="2">
      <v-list-stub twoline="true" class="py-0">
        <group-list-stub group="[object Object]" tags="tag1,tag2"></group-list-stub>
        <group-list-stub group="[object Object]" tags="tag1,tag2" usedivider="true"></group-list-stub>
        <group-list-stub group="[object Object]" tags="tag1" usedivider="true" style="display: none;"></group-list-stub>
      </v-list-stub>
    </v-card-stub>
  </v-container-stub>
</v-content-stub>
`;

exports[`List.vue has an error 1`] = `
<v-content-stub tag="main">
  <q-empty-stub icon="photo" description="" error="true"></q-empty-stub>
</v-content-stub>
`;

exports[`List.vue has no results 1`] = `
<v-content-stub tag="main">
  <v-container-stub tag="div">
    <ol>
      <li>You don't have binded any group with tags. To do so search through your groups or find new groups with the Search bar</li>
      <li>Add tags ( preferably just one tag ) that matches the group essence. ( add examples )</li>
      <li>Once the tag/s has binded to the group all your photos with that tag will be shared to that group automatically. New photos you upload will be added too.</li>
    </ol>
  </v-container-stub>
</v-content-stub>
`;

exports[`List.vue is loading 1`] = `
<v-content-stub tag="main">
  <q-empty-stub icon="" description="" loading="true"></q-empty-stub>
</v-content-stub>
`;
